<resources>
    <string name="app_name">Chefbook</string>
    <string name="usersearch_title">Kullanıcı Ara</string>
    <string name="already_have_an_account">Zaten bir hesabın var mı? Oturum aç</string>
    <string name="create_account">Hesap Oluştur</string>
    <string name="create">Oluştur</string>
    <string name="name_surname">Ad Soyad</string>
    <string name="email">Email</string>
    <string name="password">Şifre</string>
    <string name="password_again">Şifre Tekrar</string>
    <string name="userName">Kullanıcı Adı</string>
    <string name="register">Kayıt Ol</string>
    <string name="login_forgotmepassword">Şifreni mi unuttun?</string>
    <string name="login">Giriş Yap</string>
    <string name="register_login">Hesabın var mı? Giriş Yap!</string>
    <string name="txt_gallery">Gallery</string>
    <string name="txt_done">Done</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullname">Ad-Soyad</string>
    <string name="biography">Biyografi</string>
    <string name="old_password">Eski Şifre</string>
    <string name="save">Kaydet</string>
    <string name="change_password">Şifre Değiştir</string>
    <string name="send_post">Gönderi Paylaş</string>
    <string name="title">Başlık</string>
    <string name="summary">Özet</string>
    <string name="step">Adım</string>
    <string name="step_one">1.Adım</string>
    <string name="step_second">2.Adım</string>
    <string name="step_third">3.Adım</string>
    <string name="step_fourth">4.Adım</string>
    <string name="step_fifth">5.Adım</string>
    <string name="sharing">Paylaşım</string>
    <string name="followers">Takipçi</string>
    <string name="media_not_found">Gönderilecek içerik yok!</string>
    <string name="ingredient_one">1.Malzeme</string>
    <string name="ingredient_second">2.Malzeme</string>
    <string name="ingredient_third">3.Malzeme</string>
    <string name="ingredient_fourth">4.Malzeme</string>
    <string name="ingredient_fifth">5.Malzeme</string>
    <string name="ingredient_sixth">6.Malzeme</string>
    <string name="ingredient_seventh">7.Malzeme</string>
    <string name="ingredient_eight">8.Malzeme</string>
    <string name="ingredient_ninth">9.Malzeme</string>
    <string name="ingredient_tenth">10.Malzeme</string>
    <string name="description">Açıklama</string>
    <string name="ok">Tamam</string>
</resources>
